--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,9 @@
-<h1>Library</h1>
 <nav>  
-  <ul>
-    <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-  </ul>
+  
+  <a routerLink="/home" routerLinkActive="active" class="left-nav"><img src="../assets/favicon.ico" alt="Logo"></a>
+  <a routerLink="/login" routerLinkActive="active" class="right-nav nav-link">Login</a>
+  <a routerLink="/signup" routerLinkActive="active" class="right-nav nav-link">Sign Up</a>
+
 </nav>
 <router-outlet></router-outlet>
 
