--- a/client/src/app/login-form/login-form.component.css
+++ b/client/src/app/login-form/login-form.component.css
@@ -1,4 +1,26 @@
 .login-form{
-    padding: 8;
-    border-radius: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    max-width: 30rem;
+    padding: 1rem;
+    input{
+        border: 0.1rem solid rgb(186, 186, 186);
+        border-radius: 10px;
+        align-content: start;
+        margin-bottom: 1rem;
+        padding: 0.25rem;
+    }
+    button {
+        border: 0.5rem solid transparent;
+        border-radius: 10px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(102, 92, 102);
+
+    }
+    button:disabled,button[disabled]{
+        border: 0.5rem solid transparent;
+    background-color: #cccccc;
+    color: #a39f9f;
+    }
 }
