Add homepage and books service

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav>  
   
   <a routerLink="/home" routerLinkActive="active" class="left-nav"><img src="../assets/favicon.ico" alt="Logo"></a>
-  <a routerLink="/login" routerLinkActive="active" class="right-nav nav-link">Login</a>
-  <a routerLink="/signup" routerLinkActive="active" class="right-nav nav-link">Sign Up</a>
+  <a routerLink="/login" routerLinkActive="active" class="right-nav">Login</a>
+  <a routerLink="/signup" routerLinkActive="active" class="right-nav">Sign Up</a>
 
 </nav>
 <router-outlet></router-outlet>
