--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -2,7 +2,6 @@ nav{
     border: 1px solid transparent;
     overflow: hidden;
     border-bottom: 1px solid rgb(186, 186, 186);
-    padding-block: 0.55em;
     padding-inline: 0.25em;
     img{
         float: left;
@@ -13,22 +12,17 @@ nav{
     }
     .right-nav{
         float:right;
-        margin-block: 0.5em;
-        margin-left: 0.2rem;
-    }
-    .nav-link{
-        border: 0.25rem solid transparent;
+        padding: 0.5em;
+        border: 0.1rem solid transparent;
         border-radius: 10px;
         color: rgb(102, 92, 102);
-        padding-inline: 0.25rem;
         font-weight: bold;
-        padding-bottom: 1rem;
 
     }
-    .nav-link:hover{
+    .right-nav:hover{
         border: 0.1rem solid transparent;
         border-radius: 0;
         border-bottom-color: rgb(102, 92, 102);
-        padding-bottom: 1rem;
+        padding: 0.5em;
     }
 }
