--- a/client/src/app/login-form/login-form.component.css
+++ b/client/src/app/login-form/login-form.component.css
@@ -8,8 +8,11 @@
         border: 0.1rem solid rgb(186, 186, 186);
         border-radius: 10px;
         align-content: start;
-        margin-bottom: 1rem;
         padding: 0.25rem;
+    }
+    .invalid-input{
+        border: 0.1rem solid rgb(179, 68, 68);
+        border-radius: 10px;
     }
     button {
         border: 0.5rem solid transparent;
@@ -20,7 +23,13 @@
     }
     button:disabled,button[disabled]{
         border: 0.5rem solid transparent;
-    background-color: #cccccc;
-    color: #a39f9f;
+        background-color: #cccccc;
+        color: #a39f9f;
+    }
+    .login-error{
+        color: rgb(210, 65, 65);
+        padding: 0;
+        margin: 0;
+        font-size: small;
     }
 }
