--- a/client/src/app/login-form/login-form.component.html
+++ b/client/src/app/login-form/login-form.component.html
@@ -2,13 +2,13 @@
 
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
     <label for="email">Email</label>
-    <input formControlName="email" type="email" id="email" autocomplete="email" (input)="onInputChange()">
+    <input class="mb-4" formControlName="email" type="email" id="email" autocomplete="email" (input)="onInputChange()">
 
     <label for="password">Password</label>
-    <input id="password" type="password" formControlName="password" (input)="onInputChange()">
+    <input class="mb-2" id="password" type="password" formControlName="password" (input)="onInputChange()">
 
     <div *ngIf="loginError" class="error">
-        <small>Wrong Credentials</small>
+        <p class="login-error">Wrong Credentials</p>
       </div>
 
     <button [disabled]="loginForm.invalid" type="submit">Login</button>
