Add search results page

--- a/client/src/app/home-page/home-page.component.html
+++ b/client/src/app/home-page/home-page.component.html
@@ -1,9 +1,1 @@
-<div *ngFor="let book of books$ | async">
-    <div class="book">
-        <img src={{book.imageLinks.smallThumbnail}}>
-        <h2>{{book.title}}</h2>
-        <p>{{book.authors}}</p>
-
-        
-    </div>
-</div>
+<app-search-results/>
