Add signup component and add book details page

--- a/client/src/app/book-details/book-details.component.html
+++ b/client/src/app/book-details/book-details.component.html
@@ -1,1 +1,6 @@
-{{book$.title | async}}
+@if (book$) {
+    <p>{{ (book$ | async)?.title}}</p>
+    <p>{{ (book$ | async)?.authors}}</p>
+    <p>{{ (book$ | async)?.categories}}</p>
+    <img src="{{(book$ | async)?.imageLinks?.thumbnail}}">
+}
