--- a/frontend/src/app/search-results/search-results.component.html
+++ b/frontend/src/app/search-results/search-results.component.html
@@ -1,6 +1,8 @@
-<div class="page">
+<!-- <div class="page">
+    <h1>Users Search</h1>
+
     <div *ngFor="let book of books$ | async">
-        <div class="book">
+        <div class="book border-2 rounded">
             <img src={{book.imageLinks.smallThumbnail}}>
             <div class="content">
                 <a routerLink="/books/{{book.id}}">{{book.title}}</a>
@@ -8,6 +10,6 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
